--- a/package/jahia-installer-package/src/main/resources/izpack/install.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/install.properties
@@ -15,6 +15,7 @@ jahiaRootPreferredLang=${superUser.preferredLang}
 jahiaRootUsername=${superUser.username}
 jahiaToolManagerPassword=${jahiaManager.password}
 jahiaToolManagerUsername=${jahiaManager.username}
+licensePath=${licensePath}
 mailAdministrator=${mailSettings.administrator}
 mailFrom=${mailSettings.from}
 mailServer=${mailSettings.server}
@@ -24,4 +25,4 @@ storeFilesInDB=${dbSettings.dbms.storeFilesInDB}
 targetServerDirectory=${INSTALL_PATH}/${server.type}
 targetServerType=${server.type}
 webAppDirName=${jahia.war.target.dir.name}
-jahiaProperties="documentConverter.enabled":"${dmConfig.officePath.provided}","documentConverter.officeHome":"${dmConfig.officePath}","jahia.dm.viewer.enabled":"${dmConfig.pdf2swfPath.provided}","jahia.dm.viewer.pdf2swf":"${dmConfig.pdf2swfPath}","jahia.dm.thumbnails.video.enabled":"${dmConfig.ffmpegPath.provided}","jahia.dm.thumbnails.video.ffmpeg":"${dmConfig.ffmpegPath}","imageService":"${dmConfig.imageService}","imageMagickPath":"${dmConfig.imagemagickPath}","gitPath":"${studioToolSettings.gitPath}","mvnPath":"${studioToolSettings.mvnPath}","svnPath":"${studioToolSettings.svnPath}"
+jahiaProperties="documentConverter.enabled":"${dmConfig.officePath.provided}","documentConverter.officeHome":"${dmConfig.officePath}","jahia.dm.viewer.enabled":"${dmConfig.pdf2swfPath.provided}","jahia.dm.viewer.pdf2swf":"${dmConfig.pdf2swfPath}","jahia.dm.thumbnails.video.enabled":"${dmConfig.ffmpegPath.provided}","jahia.dm.thumbnails.video.ffmpeg":"${dmConfig.ffmpegPath}","imageService":"${dmConfig.imageService}","imageMagickPath":"${dmConfig.imagemagickPath}","gitPath":"${studioToolSettings.gitPath}","mvnPath":"${studioToolSettings.mvnPath}","svnPath":"${studioToolSettings.svnPath}","org.jahia.multilang.default_language_code":"${defaultLanguageCode}"
