--- a/war/pom.xml
+++ b/war/pom.xml
@@ -354,6 +354,22 @@
             <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- RESTful API -->
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>jcrestapi</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- JAX-RS OSGi Extender, depends on Jersey and its dependencies, put in bundles -->
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>jaxrs-osgi-extender</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
