--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jaxrs-osgi-extender</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
