--- a/war/pom.xml
+++ b/war/pom.xml
@@ -88,67 +88,67 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>article</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bookmarks</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>calendar</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>contact</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>docConverter</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>event</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>faq</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>formbuilder</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>googleAnalytics</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>job</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>location</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -160,7 +160,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>person</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -172,49 +172,49 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>press</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>publication</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rating</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rss</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>sitemap</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>socialsharing</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>staticHTML</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>summary</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -226,37 +226,37 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>topstories</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>translateworkflow</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>twitter</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userregistration</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>videostreaming</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>webClipping</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
